crates/canvas-cli/tests/snapshots/review_m2b__m2b_cancelled_exit.snap
---
source: crates/canvas-cli/tests/review_m2b.rs
expression: value
---
{
  "exit": 11,
  "freshness": [],
  "generated_at": "2026-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "123"
  },
  "outcome": "error",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 1,
    "cost": null,
    "storage": 0
  },
  "result": {
    "code": "cancelled",
    "details": {},
    "http_status": null,
    "message": "submission cancelled",
    "server_errors": []
  },
  "schema": "canvas-cli/error@1",
  "warnings": []
}
