crates/canvas-cli/tests/snapshots/review_m2b__m2b_network_exit.snap
---
source: crates/canvas-cli/tests/review_m2b.rs
expression: result
---
{
  "exit": 4,
  "freshness": [],
  "generated_at": "2026-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "123"
  },
  "outcome": "error",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 1,
    "cost": null,
    "storage": 0
  },
  "result": {
    "code": "network",
    "details": {},
    "http_status": null,
    "message": "network",
    "server_errors": []
  },
  "schema": "canvas-cli/error@1",
  "warnings": []
}
